# shelly-thermostat-component

./: .gitignore  hacs.json  info.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml  release.yml
config/: configuration.yaml
custom_components/shelly_thermostat/: __init__.py  api.py  climate.py  config_flow.py  const.py  coordinator.py  data.py  entity.py  manifest.json
custom_components/shelly_thermostat/translations/: de.json  en.json
scripts/: develop  lint  setup
tests/: const.py  test_api.py  test_config_flow.py  test_init.py
